# LYEngine

./: local.properties
LYEngine/: CMakeLists.txt  LYBase.h
LYEngine/android/: native_main.cpp
LYEngine/base/: Camera.cpp  Camera.h  Game.cpp  Game.h  LogicThread.cpp  LogicThread.h  Time.cpp  Time.h  Value.h
LYEngine/base/event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  EventManager.cpp  EventManager.h
LYEngine/base/log/: Log.cpp  Log.h
LYEngine/base/math/: Vector.cpp  Vector.h
LYEngine/base/node/: InputEventNode.cpp  InputEventNode.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
LYEngine/base/renderer/: Renderer.cpp  Renderer.h  RendererCommand.cpp  RendererCommand.h
LYEngine/base/texture/: Texture.h  TextureManager.cpp  TextureManager.h
LYEngine/include/: LYBase.h
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FirstScene.cpp  FirstScene.h  Test.cpp  Test.h  main.cpp
app/src/main/java/com/ly/lyengine/: MainActivity.java
app/src/main/res/values/: strings.xml
engine/: CMakeLists.txt  build.gradle
engine/src/main/: AndroidManifest.xml
engine/src/main/java/com/ly/lyengine/: GameActivity.java  LYActivity.java  LYGLView.java  LYRender.java  LYRenderer.java
engine/src/main/jni/: main.cpp
engine/src/main/jni/base/: Game.cpp  Game.h
